discussion/kv_engine/141609/141609_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove SSL phase in memcached_testapp

Now that we're using bufferevents in the state machinery
we don't need to run all of the tests in the McdTestappTest
batch with and without SSL (and that allows us to get
rid of the extra code to send data over the ssl socket)

Change-Id: I9b2edeba36cc4148a963c8265535e9ed1d426f22

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-12-07 17:24:07.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-07 17:54:08.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32379/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32379/ )

Compile error at ..\kv_engine\tests\testapp\testapp_audit.cc(324): error C2065: "ssl_port": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7701/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7701/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27906/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/tests/testapp/testapp_audit.cc:324:49:
error: use of undeclared identifier "ssl_port"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27906/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6114/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_audit.cc:324:49: error: use of undeclared identifier "ssl_port" [clang-diagnostic-error]
    MemcachedConnection connection("127.0.0.1", ssl_port, AF_INET, true);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_audit.cc:336:49: error: use of undeclared identifier "ssl_port" [clang-diagnostic-error]
    MemcachedConnection connection("127.0.0.1", ssl_port, AF_INET, true);
                                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6114/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_audit.cc:324:49:
error: use of undeclared identifier "ssl_port" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6640/ : FAILURE

Compile error at [2020-12-07T17:27:06.444Z] ../kv_engine/tests/testapp/testapp_audit.cc:324:49:
error: use of undeclared identifier "ssl_port"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6640/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7577/ : FAILURE

Compile error at [2020-12-07T17:28:13.108Z] ../kv_engine/tests/testapp/testapp_audit.cc:324:49:
error: ?ssl_port? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7577/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7971/ : FAILURE

Compile error at [2020-12-07T17:28:47.634Z] ../kv_engine/tests/testapp/testapp_audit.cc:324:49:
error: use of undeclared identifier "ssl_port"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7971/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15514/ : FAILURE

Compile error at [2020-12-07T17:30:41.608Z] ../kv_engine/tests/testapp/testapp_audit.cc:324:49:
error: use of undeclared identifier "ssl_port"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15514/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4648/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
